Fix wrapping long lines in output panel

--- a/styles/process-palette.less
+++ b/styles/process-palette.less
@@ -840,7 +840,7 @@
 .process-palette-panel-output {
   flex: 1;
   overflow: auto;
-  white-space: pre;
+  white-space: pre-line;
   background-color: black;
   color: white;
   font-family: Menlo, Consolas, 'DejaVu Sans Mono', monospace;
